--- a/support/docker/Dockerfile
+++ b/support/docker/Dockerfile
@@ -3,7 +3,7 @@ MAINTAINER "Jonathan Brown" <brownj@vmware.com>
 ENV container=docker
 VOLUME ["/sys/fs/cgroup"]
 LABEL vendor="VMware, Inc."
-LABEL com.vmware.lightwave.version="1.0.1"
+LABEL com.vmware.lightwave.version="1.0.2"
 
 EXPOSE 22 53/udp 53 88/udp 88 389 443 636 2012 2014 2015 2020
 ENTRYPOINT ["/usr/sbin/init"]
@@ -11,18 +11,26 @@ ENTRYPOINT ["/usr/sbin/init"]
 # Update tdnf and rpm
 RUN tdnf update --refresh -y \
         tdnf \
-        rpm-4.11.2
+        rpm-4.11.2 \
+        pcre-8.39 \
+        openssl-1.0.2j \
+        nss-3.25 \
+        glibc-2.22 \
+        filesystem-1.0 \
+        expat-2.2.0 \
+        curl-7.47.1 \
+        bzip2-1.0.6
 
 # Install needed packages
 RUN tdnf install -y \
-        apache-tomcat-8.0.35 \
+        apache-tomcat-8.0.37 \
         boost-1.60.0 \
-        commons-daemon-1.0.15-6.ph1.x86_64 \
+        commons-daemon-1.0.15 \
         likewise-open-6.2.10 \
-        openjre-1.8.0.92 \
-        procps-ng-3.3.11-3.ph1 \
-        sed-4.2.2-2.ph1.x86_64 \
-        systemd-228-31.ph1 \
+        openjre-1.8.0.102 \
+        procps-ng-3.3.11 \
+        sed-4.2.2 \
+        systemd-228 \
         vmware-lightwave-server-6.6.1
 
 # Remove unused files and systemd services, and configure services
@@ -32,6 +40,8 @@ RUN rm -f /etc/systemd/system/*.wants/* && \
     rm -f /lib/systemd/system/local-fs.target.wants/* && \
     rm -f /lib/systemd/system/sockets.target.wants/*udev* && \
     rm -f /lib/systemd/system/sockets.target.wants/*initctl* && \
+    rm -f /usr/lib/systemd/system/systemd-resolved.service && \
+    rm -f /usr/lib/systemd/system/systemd-networkd.service && \
     mkdir -p /var/run/sshd && \
     chmod -rx /var/run/sshd && \
     rm -f /usr/lib/systemd/system/firewall.service && \
