--- a/config/scripts/configure-identity-server.in
+++ b/config/scripts/configure-identity-server.in
@@ -49,19 +49,19 @@ rm -f /var/log/vmware/sso/tcserver.pid
 # If "Description" is present then the service was configured and we are attempting to perform an upgrade or restart the services
 if [[ $REG_VAL != *"Description"* ]]; then
    echo "Configuring VMware Identity Services"
-  
+
    JAVA_ARGS=" -Djava.security.properties=$JAVA_SEC_PROP -Dinstall.log.file=/var/log/vmware/sso/install-upgrade.log \
                -cp $CLASSPATH com.vmware.identity.configure.VMIdentityStandaloneInstaller \
                --username $LOTUS_ADMIN_DEFAULT  --domain $LOTUS_DOMAIN_DEFAULT --password $LOTUS_ADMIN_PASSWORD_DEFAULT"
 
    HOST_NAME_OPTION=
 
-   if [ ! -z $LOTUS_HOSTNAME ]; then 
-       HOST_NAME_OPTION=" --hostname $LOTUS_HOSTNAME"       
+   if [ ! -z $LOTUS_HOSTNAME ]; then
+       HOST_NAME_OPTION=" --hostname $LOTUS_HOSTNAME"
    fi
    JAVA_ARGS=$JAVA_ARGS$HOST_NAME_OPTION
-  
-   $JAVA_HOME/bin/java $JAVA_ARGS 
+
+   $JAVA_HOME/bin/java $JAVA_ARGS
    if [ $? -ne 0 ]; then
        echo "Failed to configure VMware Identity Services"
        exit 1
@@ -98,7 +98,21 @@ else
         echo "perform Upgrade"
     else
         # Starting STS should restart the IDM Service also
-        systemctl restart vmware-stsd
+
+        /opt/vmware/sbin/vmware-idmd.sh start
+
+        if [ $? -ne 0 ]; then
+            echo "failed to autostart services"
+            exit 1
+        fi
+
+        /opt/vmware/sbin/vmware-stsd.sh start
+
+        if [ $? -ne 0 ]; then
+            echo "failed to autostart services"
+            exit 1
+        fi
+
     fi
 fi
 exit 0
