--- a/support/docker/Dockerfile
+++ b/support/docker/Dockerfile
@@ -21,7 +21,7 @@ RUN tdnf update --refresh -y \
     tdnf install -y \
         apache-tomcat-8.0.37 \
         boost-1.60.0 \
-        commons-daemon-1.0.15 \
+        commons-daemon-1.0.15-7.ph1.x86_64 \
         likewise-open-6.2.10 \
         openjre-1.8.0.102 \
         procps-ng-3.3.11 \
